[metadata]
name = helloName
version = 1.0.0
author = MiyabiShibayama
author_email = miyabi@osstech.co.jp
url = https://www.osstech.co.jp
license = MIT

[options]
package = find:
zip_safe = False
python_require = '>=3.4'
install_requires = 
	click >= 7.0

[options.entry_points]
console_scripts =
	helloname = helloName.helloworld:main 
